Oct 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- remove old tribes2 master, add three new
- increase version to 0.9.9.3

Oct 22, 2002: Alex Burger <alex@users.sourceforge dot net>
- user_fix_defaults is now called if the version changes at all
- add_custom_args_defaults created, user_fix_defaults calls it to 
  add some default args for games
- add default custom args for StrikeForce & TacticalOps

Oct 22, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- use optimal width for arguments editor

Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
- Added tooltips to custom args editor
- Update docs
- Add Replace button to custom args editor
- Cleaned up new arguments editor

Oct 21, 2002: Alex Burger <alex@users.sourceforge dot net>
- Added new arguments editor - new tab for Q3, UT, UT2003

Oct 20, 2002: Alex Burger <alex@users.sourceforge dot net>
- Fixed width of redial button
- Added support for ~ in file master filename
- Fix edit menu sensitivity problem for add / remove fav

Oct 19, 2002: Alex Burger <alex@users.sourceforge dot net>
- Updated documentation
- Added server properties password page support to Unreal, UT2003
  and Rune
- Updated ca.po, de.po, es.po for 'Add new Server' and removal of
  ...'s.  Had to remove duplicate 'Properties' because of this.
  Note:  Translation still needs to be done for 'Add new Server' as 
  the translated version is still just 'Add'
- Add 'Add to Fav' to Edit menu, add 'Add new server' to Server menu
- Change menu items to not end in ...
- Make menus look similar (Add new Server instead of Add) etc.
- Only Q3A uses find_game_dir now

Oct 18, 2002: Alex Burger <alex@users.sourceforge dot net>
- Changed default port for UT2003 to 7777
- Continuing on with the October 11th addition of get_custom_arguments:
  -arguments now stored in a GSList
  -custom_arg_num no longer needed in config file
  -added to game structure and all games
  -added basic ability to add arguments to Games Invoking pref page